# Ecommerce_Pydantic_AI

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/: database.py  models.py
backend/routes/: chatbot.py
experiments/: mongodb_exp.ipynb  pydantic_experiments.ipynb
