[project]
name = "genai-powered-clothing-store"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "logfire[fastapi]>=4.33.0",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.6",
    "ollama>=0.6.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-ai>=1.102.0",
    "pydantic-ai-slim[tavily]>=1.102.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]
